# hello-c

./: .gitignore  CMakeLists.txt  README.md
src/: main
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
